part1/apps/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app 
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-todo
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: penao7/todo-app:v0.3.2.0
          volumeMounts:
          - name: shared-todo
            mountPath: /usr/app
